# ummd

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
doc/: Makefile.am  Makefile.in  ummd.conf.tmpl  ummdc.tmpl
include/: Makefile.am  Makefile.in  autoconf.h.in  conf.h  core.h
include/core/: controls.h  controls_priv.h  filters.h  filters_priv.h  ports.h  sources.h  sources_priv.h  targets.h  targets_priv.h  wirings.h
include/util/: audio.h  list.h  log.h  mem.h  net.h  prop.h  rbuf.h  url.h
src/: Makefile.am  Makefile.in  main.c
src/conf/: Makefile.am  Makefile.in  main-libconfig.c  main.c
src/core/: Makefile.am  Makefile.in  main.c  ports.c  wirings.c
src/core/controls/: Makefile.am  Makefile.in  all.c  fifo.c  osc.c  sock.c
src/core/filters/: Makefile.am  Makefile.in  all.c  delay.c  null.c
src/core/io/: Makefile.am  all.c  fifo.c  file.c  osc.c  oss.c  udp.c
src/core/sources/: Makefile.am  Makefile.in  all.c  file.c  udp.c
src/core/targets/: Makefile.am  Makefile.in  all.c  file.c  oss.c  udp.c
src/test/: Makefile.am  fftest.c  fftest1.c  fftest2.c
src/test/python/: README  ummc.py  ummd-node.py  ummd-proto.py
src/util/: Makefile.am  Makefile.in  audio-mp3.c  audio-null.c  audio.c  list.c  log.c  mem.c  mp3.c  net.c  prop.c  rbuf.c
